# image-classifier

./: .coverage  .gitignore  Dockerfile  LangCache.md  README.md  TODO.md  image-classifier.code-workspace  pyproject.toml
image_classifier/: __init__.py  __main__.py  _cli.py  _qt_fixups.py  annotate.py  api_client.py  camera.py  capture.py  classify.py  client_models.py  usda.py
image_classifier/server/: __init__.py  app.py  jobs.py  models.py  routes.py  tasks.py
test_images/: strawberry_yoghurt.avif
tests/: conftest.py  test_annotate.py  test_api_client.py  test_camera.py  test_capture.py  test_classify.py  test_cli.py  test_client_models.py  test_main_module.py  test_qt_fixups.py  test_server_jobs.py  test_server_models.py  test_server_routes.py  test_server_tasks.py  test_usda.py
